# llm-zoomcamp-2026

./: .gitignore  main.py  pyproject.toml
llm-zoomcamp_2026/projects/sepsis-rag/: README.md
llm-zoomcamp_2026/projects/sepsis-rag/data/: ssgl_2026_demo.json
llm-zoomcamp_2026/projects/sepsis-rag/notebooks/: sepsis_rag_pipeline.ipynb
