[project]
name = "datatalks-club"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.97.0",
    "elasticsearch>=9.3.0",
    "ipykernel>=7.2.0",
    "minsearch>=0.0.11",
    "openai>=2.33.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]
